apps/restaurateurs/prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurateurs-web
  namespace: prod
spec:
  selector:
    app: restaurateurs-web
  ports:
    - port: 80
      targetPort: 80
